cr_escape.h implemented but not working yet

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,6 +35,13 @@
         "ctime": "cpp",
         "memory": "cpp",
         "ratio": "cpp",
-        "thread": "cpp"
+        "thread": "cpp",
+        "atomic": "cpp",
+        "cstdarg": "cpp",
+        "cstddef": "cpp",
+        "deque": "cpp",
+        "algorithm": "cpp",
+        "memory_resource": "cpp",
+        "string": "cpp"
     }
 }
